--- a/deno.json
+++ b/deno.json
@@ -1,25 +1,38 @@
 {
   "tasks": {
-    "start": "deno run -A --watch=static/,routes/ dev.ts"
+    "start": "deno run -A --watch=static/,routes/ dev.ts",
+    "build": "deno run -A dev.ts build",
+    "preview": "deno run -A main.ts"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
   },
   "imports": {
-    "$fresh/": "https://deno.land/x/fresh@1.2.0/",
-    "preact": "https://esm.sh/preact@10.15.1",
-    "preact/": "https://esm.sh/preact@10.15.1/",
-    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.1.0",
-    "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
-    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
-    "@emotion/cache": "https://esm.sh/v128/@emotion/cache@11.10.5/dist/emotion-cache.esm.js?external=@emotion/utils",
-    "@emotion/react": "https://esm.sh/v128/@emotion/react@11.10.5/dist/emotion-react.esm.js?alias=react:preact/compat&external=preact,@emotion/cache,@emotion/use-insertion-effect-with-fallbacks,@emotion/utils",
-    "@emotion/styled": "https://esm.sh/v128/@emotion/styled@11.10.5/dist/emotion-styled.esm.js?alias=react:preact/compat&external=preact,@emotion/react,@emotion/use-insertion-effect-with-fallbacks,@emotion/utils",
-    "@emotion/use-insertion-effect-with-fallbacks": "https://esm.sh/v128/@emotion/use-insertion-effect-with-fallbacks@1.0.0/dist/emotion-use-insertion-effect-with-fallbacks.esm.js?alias=react:preact/compat&external=preact",
-    "@emotion/utils": "https://esm.sh/v128/@emotion/utils@1.2.0/dist/emotion-utils.esm.js",
-    "@mui/icons-material": "https://esm.sh/v128/@mui/icons-material@5.11.0?alias=react:preact/compat,@types/react:preact/compat,react-dom:preact/compat&external=preact,@emotion/cache,@emotion/react,@emotion/styled",
-    "@mui/material": "https://esm.sh/v128/@mui/material@5.11.7?alias=react:preact/compat,@types/react:preact/compat,react-dom:preact/compat&external=preact,@emotion/cache,@emotion/react,@emotion/styled",
-    "@mui/x-data-grid": "https://esm.sh/v128/@mui/x-data-grid@5.17.22?alias=react:preact/compat,@types/react:preact/compat,react-dom:preact/compat&external=preact,@emotion/cache,@emotion/react,@emotion/styled"
-  }
+    "$fresh/": "https://deno.land/x/fresh@1.6.8/",
+    "preact": "https://esm.sh/preact@10.19.6",
+    "preact/": "https://esm.sh/preact@10.19.6/",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.4.1",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
+    "@emotion/cache": "https://esm.sh/v135/@emotion/cache@11.11.0/dist/emotion-cache.esm.js?external=@emotion/utils",
+    "@emotion/react": "https://esm.sh/v135/@emotion/react@11.11.4/dist/emotion-react.esm.js?alias=react:preact/compat&external=preact,@emotion/cache,@emotion/use-insertion-effect-with-fallbacks,@emotion/utils",
+    "@emotion/styled": "https://esm.sh/v135/@emotion/styled@11.11.5/dist/emotion-styled.esm.js?alias=react:preact/compat&external=preact,@emotion/react,@emotion/use-insertion-effect-with-fallbacks,@emotion/utils",
+    "@emotion/use-insertion-effect-with-fallbacks": "https://esm.sh/v135/@emotion/use-insertion-effect-with-fallbacks@1.0.1/dist/emotion-use-insertion-effect-with-fallbacks.esm.js?alias=react:preact/compat&external=preact",
+    "@emotion/utils": "https://esm.sh/v135/@emotion/utils@1.2.1/dist/emotion-utils.esm.js",
+    "@mui/icons-material": "https://esm.sh/v135/@mui/icons-material@6.0.0-alpha.0?alias=react:preact/compat,@types/react:preact/compat,react-dom:preact/compat&external=preact,@emotion/cache,@emotion/react,@emotion/styled",
+    "@mui/material": "https://esm.sh/v135/@mui/material@6.0.0-alpha.0?alias=react:preact/compat,@types/react:preact/compat,react-dom:preact/compat&external=preact,@emotion/cache,@emotion/react,@emotion/styled",
+    "@mui/x-data-grid": "https://esm.sh/v135/@mui/x-data-grid@7.1.0?alias=react:preact/compat,@types/react:preact/compat,react-dom:preact/compat&external=preact,@emotion/cache,@emotion/react,@emotion/styled"
+  },
+  "lint": {
+    "rules": {
+      "tags": [
+        "fresh",
+        "recommended"
+      ]
+    }
+  },
+  "exclude": [
+    "**/_fresh/*"
+  ]
 }
